# hms_surprise

./: Makefile  README.md  pyproject.toml  requirements.txt
notebooks/: 1.0-tuga-dataset-partition.ipynb  1.1-tuga-generate-tf-record.ipynb  2.0-tuga-load-dataset.ipynb  3.0-tuga-second-try.ipynb  4.0-tuga-build-deep-cnn.ipynb
